--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI - SecureCart
+name: SecureCart CI/CD
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -24,10 +24,6 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r securecart/requirements.txt
 
-    - name: Run Django checks
-      run: |
-        python securecart/manage.py check
-
     - name: Run Snyk SAST scan
       uses: snyk/actions/python@master
       continue-on-error: true
@@ -35,6 +31,3 @@ jobs:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
       with:
         args: --file=securecart/requirements.txt --package-manager=pip
-
-    - name: Save Snyk results
-      run: echo "Snyk scan completed"
