--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r securecart/requirements.txt
-
+      
+    - name: Run Django tests
+      run: |
+        cd securecart
+        python manage.py test
+        
     - name: Run Snyk SAST scan
       uses: snyk/actions/python@master
       continue-on-error: true
